atualização de informações

--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Portfolio | Developer</title>
+    <title>Fabricio Borges | Developer</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <div class="container">
-            <h1>Your Name</h1>
+            <h1>Fabricio Borges</h1>
             <h2>Full Stack Developer</h2>
             <nav>
                 <ul>
-                    <li><a href="#about">About Me</a></li>
-                    <li><a href="#skills">Skills</a></li>
-                    <li><a href="#projects">Projects</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="#about">Sobre</a></li>
+                    <li><a href="#skills">Habilidades</a></li>
+                    <li><a href="#projects">Projetos</a></li>
+                    <li><a href="#contact">Contato</a></li>
                 </ul>
             </nav>
         </div>
@@ -25,7 +25,7 @@
 
     <section id="about" class="section">
         <div class="container">
-            <h3>About Me</h3>
+            <h3>Sobre</h3>
             <p>
                 I'm a full stack developer with experience in C#, Node.js, React, relational and non-relational databases. 
                 I have a solid background in back-end systems, microservices architecture, and I am passionate about learning and applying new technologies.
@@ -38,7 +38,7 @@
 
     <section id="skills" class="section">
         <div class="container">
-            <h3>Skills</h3>
+            <h3>Habilidades</h3>
             <div class="skills-grid">
                 <div class="skill">
                     <h4>Languages</h4>
@@ -62,7 +62,7 @@
 
     <section id="projects" class="section">
         <div class="container">
-            <h3>Projects</h3>
+            <h3>Projetos</h3>
             <div class="projects-grid">
                 <div class="project">
                     <h4>Project 1: Queue Processing System</h4>
@@ -94,7 +94,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 Your Name | All rights reserved</p>
+            <p>&copy; 2024 Fabricio Borges | All rights reserved</p>
         </div>
     </footer>
 </body>
